Added Taxonenmy for post types

--- a/blog/イミュータブルなアプリケーションステート管理.md
+++ b/blog/イミュータブルなアプリケーションステート管理.md
@@ -4,7 +4,7 @@ title: イミュータブルなアプリケーションステート管理
 banner: /assets/social-immutable.png
 medium: >-
   https://medium.com/exodevhub/immutable-data-management-in-single-state-applications-71d1bd84839f
-type: post
+posttype: post
 language: ja
 languages:
   en: /immutable-data-management-in-single-state-applications
